--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -123,9 +123,10 @@
         android:id="@+id/textView15"
         android:layout_width="145dp"
         android:layout_height="59dp"
-        android:text="Settings"
+        android:text="@string/settings_bold_text"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
