--- a/app/src/main/res/layout/media_page.xml
+++ b/app/src/main/res/layout/media_page.xml
@@ -55,10 +55,11 @@
         android:id="@+id/MediaPageTitle"
         android:layout_width="92dp"
         android:layout_height="35dp"
-        android:textColor="@color/white"
         android:text="@string/media_page_title_text"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
