--- a/app/src/main/res/layout/user_page.xml
+++ b/app/src/main/res/layout/user_page.xml
@@ -6,30 +6,19 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        ...
-
-    </LinearLayout>
-
     <TextView
         android:id="@+id/UserPageWelcomeTitle"
-        android:layout_width="236dp"
-        android:layout_height="49dp"
+        android:layout_width="336dp"
+        android:layout_height="60dp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.053" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/goToLiveViewButton"
@@ -65,7 +54,7 @@
         android:id="@+id/armDisarmSwitch"
         android:layout_width="203dp"
         android:layout_height="55dp"
-        android:text="Arm/Disarm PiBell"
+        android:text="@string/arm_disarm_pibell_text"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +68,7 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="126dp"
         android:layout_height="81dp"
-        android:text="message history"
+        android:text="@string/message_history_text"
         android:textColor="@color/white"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +97,7 @@
         android:id="@+id/imageView"
         android:layout_width="217dp"
         android:layout_height="187dp"
+        android:contentDescription="@string/todowwww"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
