--- a/app/src/main/res/layout/guest_home_page.xml
+++ b/app/src/main/res/layout/guest_home_page.xml
@@ -24,7 +24,7 @@
         android:id="@+id/guestSettingsButton"
         android:layout_width="236dp"
         android:layout_height="52dp"
-        android:text="Settings"
+        android:text="@string/Settings"
         android:textAllCaps="false"
         app:icon="@android:drawable/ic_menu_manage"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:id="@+id/notificationLogButton"
         android:layout_width="236dp"
         android:layout_height="52dp"
-        android:text="Notifications"
+        android:text="@string/notifications_page_title_text"
         android:textAllCaps="false"
         app:icon="@android:drawable/ic_lock_idle_alarm"
         app:layout_constraintBottom_toBottomOf="parent"
