--- a/app/src/main/res/layout/guest_help_page.xml
+++ b/app/src/main/res/layout/guest_help_page.xml
@@ -11,25 +11,25 @@
         android:id="@+id/helpPageTitle"
         android:layout_width="209dp"
         android:layout_height="41dp"
-        android:text="Help"
+        android:text="@string/help_page_text_title"
+        android:textAlignment="textStart"
         android:textColor="@color/white"
-        android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.057" />
+        app:layout_constraintVertical_bias="0.025" />
 
     <TextView
         android:id="@+id/helpPageConnectionStatusLabel"
         android:layout_width="143dp"
         android:layout_height="52dp"
-        android:textColor="@color/white"
-        android:text="Connection Status"
+        android:text="@string/connection_status_label_text"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
