--- a/app/src/main/res/layout/guest_notification_page.xml
+++ b/app/src/main/res/layout/guest_notification_page.xml
@@ -10,19 +10,19 @@
 
     <TextView
         android:id="@+id/GuestNotificationPageTitle"
-        android:layout_width="190dp"
+        android:layout_width="240dp"
         android:layout_height="47dp"
-        android:text="Notifications"
-        android:textAlignment="center"
+        android:text="@string/notifications_page_title_text"
+        android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintVertical_bias="0.026" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/GuestNotifsPageBackButton"
@@ -37,6 +37,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.973"
         app:srcCompat="@drawable/abc_vector_test" />
+
+
+    <Button
+        android:id="@+id/GuestRefreshNotificsButton"
+        android:layout_width="119dp"
+        android:layout_height="42dp"
+        android:text="@string/refresh_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
+
+    <Button
+        android:id="@+id/GuestDeleteNotificsButton"
+        android:layout_width="119dp"
+        android:layout_height="42dp"
+        android:text="@string/clear_pics_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.956" />
+
+
 
 
     <ScrollView
