--- a/app/src/main/res/layout/guest_settings_page.xml
+++ b/app/src/main/res/layout/guest_settings_page.xml
@@ -24,7 +24,7 @@
         android:id="@+id/guestPasswordChange"
         android:layout_width="236dp"
         android:layout_height="52dp"
-        android:text="Change password"
+        android:text="@string/change_password_button_test_guest"
         android:textAllCaps="false"
         app:icon="@android:drawable/ic_partial_secure"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,18 +63,18 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:textColor="@color/white"
-        android:layout_width="205dp"
-        android:layout_height="59dp"
+        android:layout_width="186dp"
+        android:layout_height="26dp"
         android:text="@string/push_notifications_text"
-        android:textAlignment="center"
-        android:textSize="22sp"
+        android:textAlignment="gravity"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintHorizontal_bias="0.143"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
+        app:layout_constraintVertical_bias="0.251" />
 
     <ToggleButton
         android:id="@+id/guestNotificationToggleButton"
@@ -88,5 +88,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.239" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="145dp"
+        android:layout_height="59dp"
+        android:text="@string/settings_bold_text"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.029" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
