--- a/app/src/main/res/layout/notifications_page.xml
+++ b/app/src/main/res/layout/notifications_page.xml
@@ -39,6 +39,19 @@
             android:orientation="vertical" />
     </ScrollView>
 
+
+    <Button
+        android:id="@+id/RefreshNotificsButton"
+        android:layout_width="119dp"
+        android:layout_height="42dp"
+        android:text="@string/refresh_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
+
     <Button
         android:id="@+id/DeleteNotificsButton"
         android:layout_width="119dp"
@@ -53,16 +66,16 @@
 
     <TextView
         android:id="@+id/NotificationPageTitle"
-        android:layout_width="186dp"
-        android:layout_height="35dp"
+        android:layout_width="240dp"
+        android:layout_height="48dp"
         android:text="@string/notifications_page_title_text"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintHorizontal_bias="0.081"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.025" />
